--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.10",
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
     "framer-motion": "^12.23.24",
